# taswira

./: .all-contributorsrc  .gitignore  Dockerfile  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  docker.yml  publish.yml  python-app.yml  python-publish.yml
src/taswira/: __init__.py  app.py  units.py
src/taswira/scripts/: __init__.py  arg_types.py  console.py  ingestion.py  metadata.py
taswira/: Dockerfile  README.md  environment.yml  pyproject.toml  units.py
taswira/scripts/: helpers.py  metadata.py
taswira/taswira/: __init__.py  __main__.py  app.py  console.py  helpers.py  units.py
taswira/taswira.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
taswira/taswira/scripts/: __init__.py  arg_types.py  console.py  helpers.py  ingestion.py  metadata.py
taswira/tests/: test_console.py
taswira/tests/scripts/: conftest.py  test_console.py  test_ingestion.py  test_metadata.py
tests/scripts/: sample_compiled_gcbm_output.db
