[tool.poetry]
name = "taswira"
version = "0.1.0"
description = "Visualization tool for GCBM output"
authors = ["Abhineet Tamrakar <abhineet97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
terracotta = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.2"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
